--- a/languages/lab-directory-admin.pot
+++ b/languages/lab-directory-admin.pot
@@ -555,7 +555,7 @@ msgid "Form saved"
 msgstr ""
 
 #: admin/classes/lab-directory.php:221
-msgid "modify staff profile"
+msgid "modify this staff profile"
 msgstr ""
 
 #: admin/classes/lab-directory.php:250
