--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,20 @@
 DONE:
 FIX PHD/HDR jury not saved
-
+FIX tab.js error
+FIX SCRIPT_URI index not found
+FIX Mix content issue (http:// used to load script)
+Fix HDR PHD  widget list improved
+New: add a delay parameter to futur defense list
+Fix: missing frontend dashicons css
 TODO:
+
+liste hdr vide à supprimer !!
+Thèse: ou est la traduction ?? 
+
+Thèese:sujet affiché, saut de ligne supprimés!! 
+
+
+Comment créer un plugin avec mise à jour?  (retirer les répertoires et fichiers inutiles? )
 
 voir si possible utiliser taxonomies du kit web (pods)
 BUG: si [lab-directory id=4] sur une page normale, le lien modifier pointe vers staff profile !!
@@ -11,7 +24,13 @@ Thèmes endommagés
 	Nom 	Description 		
 	lab-directory 	La feuille de style est absente.
 
+Security Note: Consider blocking direct access to your plugin PHP files by adding the following line at the top of each of them. Also be sure to refrain from executing sensitive standalone PHP code before calling any WordPress functions.
+This can be achieved in a few ways. You can either check to see if the ABSPATH constant is defined, or check if a function such as add_action exists. Either method can be used to ensure PHP execution is only allowed when it is included as part of the core system.
+defined( 'ABSPATH' ) or die( 'No script kiddies please!' );
+
+
 ==================================
+
 VOIR DEBUG.LOG kit web 
 taxonomies n'apparaissent pas dans la menu principal !! déplacer register tax dans base
 
